# spacetimedb-tui

./: CLAUDE.md  Cargo.toml  IDEAS.md  README.md  TODO.md  flake.nix
src/: app.rs  config.rs  main.rs  user_config.rs
src/api/: client.rs  types.rs  ws.rs
src/state/: app_state.rs  mod.rs
src/ui/: export.rs  sidebar.rs
src/ui/components/: error.rs  mod.rs
src/ui/tabs/: module.rs  sql.rs  tables.rs
