[package]
name = "spacetimedb-tui"
version = "0.1.0"
edition = "2021"
authors = ["SpacetimeDB TUI Contributors"]
description = "A terminal user interface for SpacetimeDB"
license = "MIT"

[[bin]]
name = "spacetimedb-tui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Identity derivation from OIDC JWT claims (SpacetimeDB maincloud tokens)
blake3 = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2"

# Cross-platform config directories (XDG on Linux, ~/Library on macOS,
# %APPDATA% on Windows). Replaces the hardcoded `$HOME` lookups that
# silently disabled user config / session restore on Windows.
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
